Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8198833

TestMemoryAwareness Docker container fails with too small maximum heap

XMLWordPrintable

    • b04

      The following test failed in nightly testing: test/hotspot/jtreg/runtime/containers/docker/TestMemoryAwareness.java
      Failure reported:
          Error occurred during initialization of VM
          Too small maximum heap

      Reproducible 100%
      Platform: Linux-x64

            rehn Robbin Ehn
            mseledtsov Mikhailo Seledtsov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: