8198833: TestMemoryAwareness Docker container fails with too small maximum heap

Reviewed-by: bobv, dholmes